# questboard

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  audit.py  cli.py  config.py  hosted_auth.py  mcp_client.py  onboarding.py  operations.py  page_refs.py  player_intake.py  preflight.py  revision.py  runtime.py  service_manager.py  setup_workspace.py  workspace_data.py
src/engines/: __init__.py  llm_provider.py  quest_generator.py  recap_writer.py  xp_engine.py
src/views/: __init__.py
